<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="garethgriffiths.tabletopcompanion.DiceActivity"
    tools:showIn="@layout/activity_dice">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textView_NumDice"
        android:id="@+id/numDiceTextV"
        android:layout_alignBottom="@+id/numDiceEdTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textAlignment="gravity"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="4"
        android:id="@+id/numDiceEdTxt"
        android:maxLength="3"
        android:text="@string/edText_NumDice"
        android:gravity="right"
        android:selectAllOnFocus="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/numDiceTextV"
        android:layout_toEndOf="@+id/numDiceTextV"
        android:numeric="integer"/>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/textView_DiceType"
    android:id="@+id/diceTypeTextV"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/numDiceTextV"
    android:layout_alignBottom="@+id/diceTypeEdTxt"
    android:layout_toLeftOf="@+id/diceTypeEdTxt"
    android:layout_toStartOf="@+id/diceTypeEdTxt"
    android:textSize="25dp"
    android:textStyle="bold"
    android:textAlignment="gravity"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="4"
        android:id="@+id/diceTypeEdTxt"
        android:maxLength="2"
        android:text="@string/edText_DiceType"
        android:layout_below="@+id/numDiceEdTxt"
        android:layout_alignLeft="@+id/numDiceEdTxt"
        android:layout_alignStart="@+id/numDiceEdTxt"
        android:gravity="right"
        android:selectAllOnFocus="true"
        android:numeric="integer"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioB_LessThan"
        android:id="@+id/lessThanRadioB"
        android:layout_above="@+id/discardButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="36dp"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioB_GreaterThan"
        android:id="@+id/greaterThanRadioB"
        android:layout_alignTop="@+id/lessThanRadioB"
        android:layout_toRightOf="@+id/lessThanRadioB"
        android:layout_toEndOf="@+id/lessThanRadioB"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="4"
        android:maxLength="3"
        android:id="@+id/filterNumEdTxt"
        android:layout_alignTop="@+id/greaterThanRadioB"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/edText_NumFilter"
        android:gravity="center"
        android:selectAllOnFocus="true"
        android:numeric="integer"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Discard"
        android:id="@+id/discardButton"
        android:layout_alignTop="@+id/rollButton"
        android:layout_toLeftOf="@+id/rollButton"
        android:layout_toStartOf="@+id/rollButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Roll"
        android:id="@+id/rollButton"
        android:layout_marginTop="108dp"
        android:layout_below="@+id/diceTypeTextV"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/diceResultListV"
        android:scrollIndicators="right"
        android:visibility="visible"
        android:layout_below="@+id/discardButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Filter"
        android:id="@+id/filterButton"
        android:layout_below="@+id/lessThanRadioB"
        android:layout_toLeftOf="@+id/discardButton"
        android:layout_toStartOf="@+id/discardButton"/>

</RelativeLayout>
